PR-fixes